@@ -43,6 +43,7 @@
 #include "srcp-power.h"
 #include "srcp-info.h"
 #include "srcp-error.h"
+#include "ttycygwin.h"
 
 #define __ib ((IB_DATA*)busses[busnumber].driverdata)
 
